# NeMo-Curator

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  codecov.yml  conftest.py  pyproject.toml  pytest.ini  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  copy-pr-bot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _build_container.yml  (+13 more)
config/: arxiv_builder.yaml  cc_warc_builder.yaml  fasttext_langid.yaml  fasttext_quality_filter.yaml  fuzzy_dedup_config.yaml  heuristic_filter_code.yaml  heuristic_filter_en.yaml  heuristic_filter_non-en.yaml  lm_tasks.yaml  pii_config.yaml  sem_dedup_config.yaml  wikipedia_builder.yaml
docs/: README.md
examples/: README.md  aegis_classifier_example.py  async_llm_pii_redaction.py  blend_and_shuffle.py  classifier_filtering.py  ct2_translation_example.py  domain_classifier_example.py  download_arxiv.py  download_common_crawl.py  download_wikipedia.py  exact_deduplication.py  find_pii_and_deidentify.py  fineweb_edu_classifier_example.py  fuzzy_deduplication.py  identify_languages.py  identify_languages_and_fix_unicode.py  llm_pii_redaction.py  quality_classifier_example.py  raw_download_common_crawl.py  semdedup_example.py  task_decontamination.py  translation_crossfit_integration.py  translation_example.py
nemo_curator/: __init__.py  _compat.py  _deduplicator.py  cache.py  hello.py  log.py  package_info.py  sample_dataframe.py
ray-curator/: CONTRIBUTING.md  api-design.md  pyproject.toml
ray-curator/ray_curator/: config.py
ray-curator/ray_curator/backends/experimental/: utils.py
ray-curator/ray_curator/backends/experimental/ray_data/: __init__.py  adapter.py  executor.py  setup_utils.py
ray-curator/ray_curator/backends/xenna/: adapter.py  executor.py  ray_cluster_init.py
ray-curator/ray_curator/examples/: common_crawl_example.py  quick-synthetic.py  quickstart.py  simple_read_example.py  video_splitting_pipeline.py
ray-curator/ray_curator/pipeline/: pipeline.py
ray-curator/ray_curator/stages/: base.py  resources.py
ray-curator/ray_curator/stages/classifiers/: aegis.py  aegis_utils.py  base.py  content_type.py  crossfit_wrappers.py  domain.py  fineweb_edu.py  prompt_task_complexity.py  quality.py  utils.py
ray-curator/ray_curator/stages/clipping/: clip_extraction_stages.py  frame_extraction.py
ray-curator/ray_curator/stages/download/text/: README.md  __init__.py  utils.py
ray-curator/ray_curator/stages/download/text/base/: __init__.py  download.py  extract.py  iterator.py  stage.py  url_generation.py
ray-curator/ray_curator/stages/download/text/common_crawl/: __init__.py  commoncrawl.py  download.py  extract.py  html_extractor.py  stage.py  url_generation.py  warc_iterator.py  warc_reader.py
ray-curator/ray_curator/stages/download/text/common_crawl/html_extractors/: __init__.py  base.py  justext.py  resiliparse.py  trafilatura.py
ray-curator/ray_curator/stages/download/text/common_crawl/utils/: __init__.py  zh_stopwords.py
ray-curator/ray_curator/stages/download/text/html_extractors/utils/: ja_stopwords.py
ray-curator/ray_curator/stages/filters/: __init__.py  classifier_filter.py  code.py  doc_filter.py  fasttext_filter.py  heuristic_filter.py
ray-curator/ray_curator/stages/io/reader/: file_partitioning.py  jsonl.py
ray-curator/ray_curator/stages/io/writer/: __init__.py  dataframe.py  jsonl.py  parquet.py  utils.py
ray-curator/ray_curator/stages/modules/: __init__.py  filter.py  score_filter.py
ray-curator/ray_curator/stages/pii/ner_pii/: __init__.py  algorithm.py  config.py  custom_batch_analyzer_engine.py  example_config.yaml  pii_analyzer.py  pii_anonymization.py  pii_detection.py  pii_redaction.py
ray-curator/ray_curator/stages/pii/ner_pii/recognizers/: address_recognizer.py
ray-curator/ray_curator/stages/services/: conversation_formatter.py  model_client.py  openai_client.py
ray-curator/ray_curator/stages/synthetic/: simple.py
ray-curator/ray_curator/stages/utils/: text_utils.py
ray-curator/ray_curator/stages/video/clipping/: clip_extraction_stages.py
ray-curator/ray_curator/stages/video/io/: video_download.py
ray-curator/ray_curator/tasks/: __init__.py  document.py  file_group.py  image.py  tasks.py  utils.py  video.py
ray-curator/ray_curator/utils/: code_meta.csv  decoder_utils.py  file_utils.py  grouping.py  nvcodec_utils.py  operation_utils.py  performance_utils.py
ray-curator/tests/backends/: conftest.py  test_integration.py  utils.py
ray-curator/tests/stages/: test_base.py  test_filters.py
ray-curator/tests/stages/download/text/: test_html_extractors_implementation.py
ray-curator/tests/stages/download/text/base/: test_download.py  test_extract.py  test_iterator.py  test_stage.py  test_url_generation.py
ray-curator/tests/stages/download/text/common_crawl/: test_common_crawl.py  test_download.py  test_extract.py  test_html_extractor.py  test_html_extractors.py  test_html_extractors_implementation.py  test_stage.py  test_url_generation.py  test_warc_iterator.py  test_warc_reader.py
ray-curator/tests/stages/io/writer/: conftest.py  test_jsonl.py  test_parquet.py  test_utils.py
requirements/: requirements.txt  requirements_bitext.txt  requirements_cuda12x.txt  requirements_image.txt  requirements_rapids_nightly.txt
tests/: __init__.py  test_add_id.py  test_argument_helper.py  test_backends.py  test_blend_datasets.py  test_classifiers.py  test_cleaning.py  test_config.py  test_dataset.py  test_deduplicator.py  test_download.py  test_duplicates_removal.py  test_exact_dedup.py  test_filters.py  test_fuzzy_dedup.py  test_hello.py  test_io.py  test_joiner.py  test_llm_pii.py  test_metrics.py  test_nemotron_cc.py  test_pii_accuracy.py  test_read_data.py  test_read_simple_bitext.py  test_regex_modifier.py  test_sdg_pipeline_filters.py  test_semdedup.py  test_separate_by_metadata.py  test_seperate_by_metadata.py  test_shuffle.py  test_slurm.py  test_splitter.py  test_splitter_joiner.py  test_task_decontamination.py  test_unicode_reformatter.py
tutorials/: README.md
(+667 files in other folders)
